# rama-judicial

./: .gitignore  .keepalive  README.md  pyproject.toml  revisar_procesos.py  sync_entidades.py
.github/workflows/: entidades.yml  procesos.yml
rama/: __init__.py
rama/tasks/: __init__.py  api_client.py  google_drive.py  notifications.py  web_scraping.py
rama/utils/: constants.py  logging_utils.py
rama/workflows/: __init__.py  entidades.py  procesos.py
